--- a/shopping_cart/translations/hr.csv
+++ b/shopping_cart/translations/hr.csv
@@ -7,6 +7,8 @@ Default Customer Group,Zadani Korisnik Grupa
 Default Territory,Zadani Regija
 Delivered,Isporučena
 Enable Shopping Cart,Omogućite Košarica
+Go ahead and add something to your cart.,Ići naprijed i dodati nešto u košaricu.
+Hey! Go ahead and add an address,Hej! Ići naprijed i dodati adresu
 Invalid Billing Address,Pogrešna adresa naplate
 Invalid Shipping Address,Invalid Dostava Adresa
 Missing Currency Exchange Rates for {0},Nedostaje Tečajne stope za {0}
@@ -20,6 +22,7 @@ Please specify currency in Company,Navedite valutu u Društvu
 Please write something,Molimo napisati nešto
 Please write something in subject and message!,Molimo napisati nešto u temi i poruke !
 Price List,Cjenik
+Price List not configured.,Popis Cijena nije konfiguriran.
 Quotation Series,Ponuda Serija
 Shipping Rule,Dostava Pravilo
 Shopping Cart,Košarica
@@ -30,10 +33,13 @@ Shopping Cart Shipping Rule,Košarica Dostava Pravilo
 Shopping Cart Shipping Rules,Košarica Dostava Pravila
 Shopping Cart Taxes and Charges Master,Košarica poreze i troškove Master
 Shopping Cart Taxes and Charges Masters,Košarica Porezi i naknade Masters
+Something went wrong!,Nešto je pošlo po krivu!
+Something went wrong.,Nešto je pošlo po zlu.
 Tax Master,Porezna Master
 To Pay,platiti
 Updated,Obnovljeno
 You are not allowed to reply to this ticket.,Vi ne smijete odgovoriti na ovu kartu.
+You need to be logged in to view your cart.,Morate biti prijavljeni da biste vidjeli svoju košaricu.
 You need to enable Shopping Cart,Morate omogućiti Košarica
 {0} cannot be purchased using Shopping Cart,{0} ne može se kupiti pomoću Košarica
 {0} is required,{0} je potrebno
