--- a/shopping_cart/translations/zh-cn.csv
+++ b/shopping_cart/translations/zh-cn.csv
@@ -7,6 +7,8 @@ Default Customer Group,默认用户组
 Default Territory,默认领地
 Delivered,交付
 Enable Shopping Cart,启用的购物车
+Go ahead and add something to your cart.,来吧，讲一下你的车。
+Hey! Go ahead and add an address,嘿！来吧，添加一个地址
 Invalid Billing Address,无效的帐单地址
 Invalid Shipping Address,无效的送货地址
 Missing Currency Exchange Rates for {0},缺少货币汇率的{0}
@@ -20,6 +22,7 @@ Please specify currency in Company,请公司指定的货币
 Please write something,请写东西
 Please write something in subject and message!,请写东西的主题和消息！
 Price List,价格表
+Price List not configured.,未配置价格表。
 Quotation Series,系列报价
 Shipping Rule,送货规则
 Shopping Cart,购物车
@@ -30,10 +33,13 @@ Shopping Cart Shipping Rule,购物车运费规则
 Shopping Cart Shipping Rules,购物车运费规则
 Shopping Cart Taxes and Charges Master,购物车税收和收费硕士
 Shopping Cart Taxes and Charges Masters,购物车税收和收费硕士
+Something went wrong!,出事了！
+Something went wrong.,出事了。
 Tax Master,税务硕士
 To Pay,支付方式
 Updated,更新
 You are not allowed to reply to this ticket.,你不允许回复此票。
+You need to be logged in to view your cart.,您需要登录才能查看您的购物车。
 You need to enable Shopping Cart,您需要启用的购物车
 {0} cannot be purchased using Shopping Cart,{0}不能使用购物车购买
 {0} is required,{0}是必需的
