--- a/shopping_cart/translations/fr.csv
+++ b/shopping_cart/translations/fr.csv
@@ -7,6 +7,8 @@ Default Customer Group,Groupe de clients par défaut
 Default Territory,Territoire défaut
 Delivered,Livré
 Enable Shopping Cart,Activer Panier
+Go ahead and add something to your cart.,Allez-y et ajouter quelque chose à votre panier.
+Hey! Go ahead and add an address,Hé ! Allez-y et ajoutez une adresse
 Invalid Billing Address,"Pour exécuter un test ajouter le nom du module dans la route après '{0}' . Par exemple, {1}"
 Invalid Shipping Address,effondrement
 Missing Currency Exchange Rates for {0},Vider le cache
@@ -20,6 +22,7 @@ Please specify currency in Company,S&#39;il vous plaît préciser la devise dans
 Please write something,S'il vous plaît écrire quelque chose
 Please write something in subject and message!,S'il vous plaît écrire quelque chose dans le thème et le message !
 Price List,Liste des Prix
+Price List not configured.,Liste des prix non configuré.
 Quotation Series,Série de devis
 Shipping Rule,Livraison règle
 Shopping Cart,Panier
@@ -30,10 +33,13 @@ Shopping Cart Shipping Rule,Panier Livraison règle
 Shopping Cart Shipping Rules,Panier Règles d&#39;expédition
 Shopping Cart Taxes and Charges Master,Panier taxes et redevances Maître
 Shopping Cart Taxes and Charges Masters,Panier Taxes et frais de maîtrise
+Something went wrong!,Quelque chose s'est mal passé!
+Something went wrong.,Une erreur est survenue.
 Tax Master,Maître d&#39;impôt
 To Pay,à payer
 Updated,Mise à jour
 You are not allowed to reply to this ticket.,Vous n'êtes pas autorisé à répondre à ce billet .
+You need to be logged in to view your cart.,Vous devez être connecté pour voir votre panier.
 You need to enable Shopping Cart,Poster n'existe pas . S'il vous plaît ajoutez poste !
 {0} cannot be purchased using Shopping Cart,Envoyer permanence {0} ?
 {0} is required,{0} ne peut pas être acheté en utilisant Panier
