--- a/shopping_cart/translations/id.csv
+++ b/shopping_cart/translations/id.csv
@@ -1,40 +1,46 @@
-"<a href=""#Sales Browser/Customer Group"">Add / Edit</a>",{0} diperlukan
-"<a href=""#Sales Browser/Territory"">Add / Edit</a>",Mata Uang diperlukan untuk Daftar Harga {0}
-Billed,Anda tidak diizinkan untuk membalas tiket ini.
-Company,Daftar Belanja Daftar Harga
-Currency is required for Price List {0},Daftar Harga
-Default Customer Group,Silahkan menulis sesuatu dalam subjek dan pesan!
-Default Territory,Silakan tentukan mata uang di Perusahaan
-Delivered,"Jika ditentukan, mengirim newsletter menggunakan alamat email ini"
-Enable Shopping Cart,Quotation Series
-Invalid Billing Address,Guru Pajak
-Invalid Shipping Address,Untuk Bayar
-Missing Currency Exchange Rates for {0},Aturan Pengiriman
-Name is required,{0} tidak dapat dibeli dengan menggunakan Keranjang Belanja
-Not Allowed,Pajak Keranjang Belanja dan Biaya Guru
-Paid,Daftar Belanja Pengiriman Aturan
-Partially Billed,Anda harus mengaktifkan Keranjang Belanja
-Partially Delivered,Alamat Penagihan valid
-Please specify a Price List which is valid for Territory,Sebagian Ditagih
-Please specify currency in Company,Belanja Pengiriman Rule
-Please write something,Daftar Harga Daftar Belanja
-Please write something in subject and message!,Nama diperlukan
-Price List,"<a href=""#Sales Browser/Customer Group""> Add / Edit </ a>"
-Quotation Series,Daftar Belanja Pajak dan Biaya Masters
-Shipping Rule,Tentukan Daftar Harga yang berlaku untuk Wilayah
-Shopping Cart,"<a href=""#Sales Browser/Territory""> Add / Edit </ a>"
-Shopping Cart Price List,Diperbarui
-Shopping Cart Price Lists,Sebagian Disampaikan
-Shopping Cart Settings,Bawaan Pelanggan Grup
-Shopping Cart Shipping Rule,Daftar Belanja
-Shopping Cart Shipping Rules,Tidak Diizinkan
-Shopping Cart Taxes and Charges Master,Perusahaan
-Shopping Cart Taxes and Charges Masters,Alamat Pengiriman valid
-Tax Master,Disampaikan
-To Pay,Terbayar
-Updated,Silahkan menulis sesuatu
-You are not allowed to reply to this ticket.,{0} {1} memiliki wilayah umum {2}
-You need to enable Shopping Cart,Pengaturan Keranjang Belanja
-{0} cannot be purchased using Shopping Cart,Ditagih
-{0} is required,Aktifkan Keranjang Belanja
-{0} {1} has a common territory {2},Wilayah standar
+"<a href=""#Sales Browser/Customer Group"">Add / Edit</a>","<a href=""#Sales Browser/Customer Group""> Add / Edit </ a>"
+"<a href=""#Sales Browser/Territory"">Add / Edit</a>","<a href=""#Sales Browser/Territory""> Tambah / Edit </ a>"
+Billed,Ditagih
+Company,Perusahaan
+Currency is required for Price List {0},Mata Uang diperlukan untuk Daftar Harga {0}
+Default Customer Group,Bawaan Pelanggan Grup
+Default Territory,Wilayah standar
+Delivered,Disampaikan
+Enable Shopping Cart,Aktifkan Keranjang Belanja
+Go ahead and add something to your cart.,Pergi ke depan dan menambahkan sesuatu ke keranjang Anda.
+Hey! Go ahead and add an address,Hei! Pergi ke depan dan menambahkan alamat
+Invalid Billing Address,Alamat Penagihan valid
+Invalid Shipping Address,Alamat Pengiriman valid
+Missing Currency Exchange Rates for {0},Hilang Kurs mata uang Tarif untuk {0}
+Name is required,Nama dibutuhkan
+Not Allowed,Tidak Diizinkan
+Paid,Terbayar
+Partially Billed,Sebagian Ditagih
+Partially Delivered,Sebagian Disampaikan
+Please specify a Price List which is valid for Territory,Tentukan Daftar Harga yang berlaku untuk Wilayah
+Please specify currency in Company,Silakan tentukan mata uang di Perusahaan
+Please write something,Silahkan menulis sesuatu
+Please write something in subject and message!,Silahkan menulis sesuatu dalam subjek dan pesan!
+Price List,Daftar Harga
+Price List not configured.,Daftar Harga belum dikonfigurasi.
+Quotation Series,Quotation Series
+Shipping Rule,Aturan Pengiriman
+Shopping Cart,Daftar Belanja
+Shopping Cart Price List,Daftar Belanja Daftar Harga
+Shopping Cart Price Lists,Daftar Harga Daftar Belanja
+Shopping Cart Settings,Pengaturan Keranjang Belanja
+Shopping Cart Shipping Rule,Belanja Pengiriman Rule
+Shopping Cart Shipping Rules,Daftar Belanja Pengiriman Aturan
+Shopping Cart Taxes and Charges Master,Pajak Keranjang Belanja dan Biaya Guru
+Shopping Cart Taxes and Charges Masters,Daftar Belanja Pajak dan Biaya Masters
+Something went wrong!,Ada yang tidak beres!
+Something went wrong.,Ada Sesuatu yang tidak beres.
+Tax Master,Guru Pajak
+To Pay,Untuk Bayar
+Updated,Diperbarui
+You are not allowed to reply to this ticket.,Anda tidak diizinkan untuk membalas tiket ini.
+You need to be logged in to view your cart.,Anda harus login untuk melihat keranjang Anda.
+You need to enable Shopping Cart,Anda harus mengaktifkan Keranjang Belanja
+{0} cannot be purchased using Shopping Cart,{0} tidak dapat dibeli dengan menggunakan Keranjang Belanja
+{0} is required,{0} diperlukan
+{0} {1} has a common territory {2},{0} {1} memiliki wilayah umum {2}
