--- a/shopping_cart/translations/it.csv
+++ b/shopping_cart/translations/it.csv
@@ -7,6 +7,8 @@ Default Customer Group,Gruppo Clienti Predefinito
 Default Territory,Territorio Predefinito
 Delivered,Consegnato
 Enable Shopping Cart,Abilita Carello Acquisti
+Go ahead and add something to your cart.,Vai avanti e aggiungere qualcosa al tuo carrello.
+Hey! Go ahead and add an address,Ehi! Vai avanti e aggiungere un indirizzo
 Invalid Billing Address,Valido indirizzo di fatturazione
 Invalid Shipping Address,Valido Indirizzo di spedizione
 Missing Currency Exchange Rates for {0},Manca valuta Tassi di cambio {0}
@@ -20,6 +22,7 @@ Please specify currency in Company,Si prega di specificare la valuta in Azienda
 Please write something,Si prega di scrivere qualcosa
 Please write something in subject and message!,Si prega di scrivere qualcosa in oggetto e il messaggio !
 Price List,Listino Prezzi
+Price List not configured.,Prezzo di listino non è configurato.
 Quotation Series,Serie Quotazione
 Shipping Rule,Spedizione Rule
 Shopping Cart,Carrello spesa
@@ -30,10 +33,13 @@ Shopping Cart Shipping Rule,Carrello Spedizioni Rule
 Shopping Cart Shipping Rules,Carrello Regole di Spedizione
 Shopping Cart Taxes and Charges Master,Carrello Tasse e Spese master
 Shopping Cart Taxes and Charges Masters,Carrello Tasse e Costi Masters
+Something went wrong!,Qualcosa è andato storto!
+Something went wrong.,Qualcosa è andato storto.
 Tax Master,Tax Maestro
 To Pay,To Pay
 Updated,Aggiornato
 You are not allowed to reply to this ticket.,Non sei autorizzato a rispondere a questo biglietto .
+You need to be logged in to view your cart.,Devi essere loggato per vedere il tuo carrello.
 You need to enable Shopping Cart,È necessario abilitare Carrello
 {0} cannot be purchased using Shopping Cart,{0} non può essere acquistato tramite Carrello
 {0} is required,{0} è richiesto
