--- a/shopping_cart/translations/pt-BR.csv
+++ b/shopping_cart/translations/pt-BR.csv
@@ -7,6 +7,8 @@ Default Customer Group,Grupo de Clientes padrão
 Default Territory,Território padrão
 Delivered,Entregue
 Enable Shopping Cart,Ativar Carrinho de Compras
+Go ahead and add something to your cart.,Vá em frente e acrescentar algo ao seu carrinho.
+Hey! Go ahead and add an address,Ei! Vá em frente e adicionar um endereço
 Invalid Billing Address,Inválido Endereço de Cobrança
 Invalid Shipping Address,Inválido envio Endereço
 Missing Currency Exchange Rates for {0},Falta de câmbio de moeda para {0}
@@ -20,6 +22,7 @@ Please specify currency in Company,"Por favor, especificar a moeda em Empresa"
 Please write something,"Por favor, escreva algo"
 Please write something in subject and message!,"Por favor, escreva algo no assunto e uma mensagem !"
 Price List,Lista de Preços
+Price List not configured.,Lista de Preço não configurado.
 Quotation Series,Série citação
 Shipping Rule,Regra de envio
 Shopping Cart,Carrinho de Compras
@@ -30,10 +33,13 @@ Shopping Cart Shipping Rule,Carrinho de Compras Rule envio
 Shopping Cart Shipping Rules,Carrinho Regras frete
 Shopping Cart Taxes and Charges Master,Carrinho impostos e taxas Mestre
 Shopping Cart Taxes and Charges Masters,Carrinho Impostos e Taxas de mestrado
+Something went wrong!,Algo deu errado!
+Something went wrong.,Algo deu errado.
 Tax Master,Imposto de Mestre
 To Pay,pagar
 Updated,Atualizado
 You are not allowed to reply to this ticket.,Você não tem permissão para responder a este bilhete .
+You need to be logged in to view your cart.,Você precisa estar logado para ver seu carrinho.
 You need to enable Shopping Cart,Você precisa habilitar o Carrinho de Compras
 {0} cannot be purchased using Shopping Cart,{0} não pode ser comprado usando Carrinho de Compras
 {0} is required,{0} é necessária
