--- a/shopping_cart/translations/ro.csv
+++ b/shopping_cart/translations/ro.csv
@@ -7,6 +7,8 @@ Default Customer Group,Implicit Client Group
 Default Territory,Implicit Teritoriul
 Delivered,Livrat
 Enable Shopping Cart,Activați Cosul de cumparaturi
+Go ahead and add something to your cart.,Du-te și adaugă ceva la coș.
+Hey! Go ahead and add an address,Hei! Du-te și adăugați o adresă
 Invalid Billing Address,Adresa de facturare invalid
 Invalid Shipping Address,Adresa Transport invalid
 Missing Currency Exchange Rates for {0},Lipsește valutar Curs valutar pentru {0}
@@ -20,6 +22,7 @@ Please specify currency in Company,Vă rugăm să specificați în valută de co
 Please write something,Vă rugăm să scrieți ceva
 Please write something in subject and message!,Vă rugăm să scrieți ceva în subiect și un mesaj!
 Price List,Lista de prețuri
+Price List not configured.,Lista de prețuri nu a fost configurat.
 Quotation Series,Citat Series
 Shipping Rule,Regula de transport maritim
 Shopping Cart,Cosul de cumparaturi
@@ -30,10 +33,13 @@ Shopping Cart Shipping Rule,Cosul de cumparaturi Regula Transport
 Shopping Cart Shipping Rules,Cosul de cumparaturi Reguli de expediere
 Shopping Cart Taxes and Charges Master,Taxele coș de cumpărături și taxe de Master
 Shopping Cart Taxes and Charges Masters,Cumpărături Impozite și taxe cos Masters
+Something went wrong!,Ceva a mers prost!
+Something went wrong.,Ceva nu a funcționat.
 Tax Master,Taxa de Master
 To Pay,Pentru a Pay
 Updated,Actualizat
 You are not allowed to reply to this ticket.,Nu vi se permite să răspundeți la acest bilet.
+You need to be logged in to view your cart.,Ai nevoie să fii logat pentru a vedea cosul de cumparaturi.
 You need to enable Shopping Cart,Ai nevoie pentru a permite Cosul de cumparaturi
 {0} cannot be purchased using Shopping Cart,{0} nu pot fi achiziționate cu ajutorul Cosul de cumparaturi
 {0} is required,{0} este necesară
