--- a/shopping_cart/translations/ru.csv
+++ b/shopping_cart/translations/ru.csv
@@ -1,40 +1,46 @@
-"<a href=""#Sales Browser/Customer Group"">Add / Edit</a>",{0} требуется
-"<a href=""#Sales Browser/Territory"">Add / Edit</a>",Валюта необходима для Прейскурантом {0}
-Billed,Вы не можете отвечать на этот билет.
-Company,Корзина Прайс-лист
-Currency is required for Price List {0},Прайс-лист
-Default Customer Group,"Пожалуйста, напишите что-нибудь в тему и текст сообщения!"
-Default Territory,"Пожалуйста, сформулируйте валюту в компании"
-Delivered,"Если указано, отправить бюллетень с помощью этого адреса электронной почты"
-Enable Shopping Cart,Цитата серии
-Invalid Billing Address,Налоговый Мастер
-Invalid Shipping Address,Платить
-Missing Currency Exchange Rates for {0},Правило Доставка
-Name is required,{0} не может быть приобретен с помощью Корзина
-Not Allowed,Корзина Налоги и сборы Мастер
-Paid,Корзина Правила Доставка
-Partially Billed,Вам необходимо включить Корзина
-Partially Delivered,Неверный Адрес для выставления счета
-Please specify a Price List which is valid for Territory,Частично Объявленный
-Please specify currency in Company,Корзина Правило Доставка
-Please write something,Корзина Прайс-листы
-Please write something in subject and message!,Имя обязательно
-Price List,"<a href=""#Sales Browser/Customer Group""> Добавить / Изменить </>"
-Quotation Series,Налоги Корзина Торговые и сборы Мастера
-Shipping Rule,"Пожалуйста, сформулируйте прайс-лист, который действителен для территории"
-Shopping Cart,"<a href=""#Sales Browser/Territory""> Добавить / Изменить </>"
-Shopping Cart Price List,Обновлено
-Shopping Cart Price Lists,Частично Поставляются
-Shopping Cart Settings,По умолчанию Группа клиентов
-Shopping Cart Shipping Rule,Корзина
-Shopping Cart Shipping Rules,Не разрешены
-Shopping Cart Taxes and Charges Master,Компания
-Shopping Cart Taxes and Charges Masters,Неверный адрес пересылки
-Tax Master,Доставлено
-To Pay,Оплачено
-Updated,"Пожалуйста, напишите что-нибудь"
-You are not allowed to reply to this ticket.,{0} {1} имеет общую территорию {2}
-You need to enable Shopping Cart,Корзина Настройки
-{0} cannot be purchased using Shopping Cart,Объявленный
-{0} is required,Включить Корзина
-{0} {1} has a common territory {2},По умолчанию Территория
+"<a href=""#Sales Browser/Customer Group"">Add / Edit</a>","<a href=""#Sales Browser/Customer Group""> Добавить / Изменить </>"
+"<a href=""#Sales Browser/Territory"">Add / Edit</a>","<a href=""#Sales Browser/Territory""> Добавить / Изменить </>"
+Billed,Объявленный
+Company,Организация
+Currency is required for Price List {0},Валюта необходима для Прейскурантом {0}
+Default Customer Group,По умолчанию Группа клиентов
+Default Territory,По умолчанию Территория
+Delivered,Доставлено
+Enable Shopping Cart,Включить Корзина
+Go ahead and add something to your cart.,Идем дальше и добавить что-то в корзину.
+Hey! Go ahead and add an address,16.35 Эй! Идем дальше и добавить адрес
+Invalid Billing Address,Неверный Адрес для выставления счета
+Invalid Shipping Address,Неверный адрес пересылки
+Missing Currency Exchange Rates for {0},Отсутствует валютный курс для {0}
+Name is required,Имя обязательно
+Not Allowed,Не разрешены
+Paid,Оплачено
+Partially Billed,Частично Объявленный
+Partially Delivered,Частично Поставляются
+Please specify a Price List which is valid for Territory,"Пожалуйста, сформулируйте прайс-лист, который действителен для территории"
+Please specify currency in Company,"Пожалуйста, сформулируйте валюту в компании"
+Please write something,"Пожалуйста, напишите что-нибудь"
+Please write something in subject and message!,"Пожалуйста, напишите что-нибудь в тему и текст сообщения!"
+Price List,Прайс-лист
+Price List not configured.,Прайс-лист не настроен.
+Quotation Series,Цитата серии
+Shipping Rule,Правило Доставка
+Shopping Cart,Корзина
+Shopping Cart Price List,Корзина Прайс-лист
+Shopping Cart Price Lists,Корзина Прайс-листы
+Shopping Cart Settings,Корзина Настройки
+Shopping Cart Shipping Rule,Корзина Правило Доставка
+Shopping Cart Shipping Rules,Корзина Правила Доставка
+Shopping Cart Taxes and Charges Master,Корзина Налоги и сборы Мастер
+Shopping Cart Taxes and Charges Masters,Налоги Корзина Торговые и сборы Мастера
+Something went wrong!,Что-то пошло не так!
+Something went wrong.,Что-то пошло не так.
+Tax Master,Налоговый Мастер
+To Pay,Платить
+Updated,Обновлено
+You are not allowed to reply to this ticket.,Вы не можете отвечать на этот билет.
+You need to be logged in to view your cart.,"Вы должны войти в систему, чтобы просмотреть свою корзину."
+You need to enable Shopping Cart,Вам необходимо включить Корзина
+{0} cannot be purchased using Shopping Cart,{0} не может быть приобретен с помощью Корзина
+{0} is required,{0} требуется
+{0} {1} has a common territory {2},{0} {1} имеет общую территорию {2}
