--- a/shopping_cart/translations/zh-tw.csv
+++ b/shopping_cart/translations/zh-tw.csv
@@ -7,6 +7,8 @@ Default Customer Group,默認用戶組
 Default Territory,默認領地
 Delivered,交付
 Enable Shopping Cart,啟用的購物車
+Go ahead and add something to your cart.,來吧，講一下你的車。
+Hey! Go ahead and add an address,嘿！來吧，添加一個地址
 Invalid Billing Address,無效的帳單地址
 Invalid Shipping Address,無效的送貨地址
 Missing Currency Exchange Rates for {0},缺少貨幣匯率的{0}
@@ -20,6 +22,7 @@ Please specify currency in Company,請公司指定的貨幣
 Please write something,請寫東西
 Please write something in subject and message!,請寫東西的主題和消息！
 Price List,價格表
+Price List not configured.,未配置價格表。
 Quotation Series,系列報價
 Shipping Rule,送貨規則
 Shopping Cart,購物車
@@ -30,10 +33,13 @@ Shopping Cart Shipping Rule,購物車運費規則
 Shopping Cart Shipping Rules,購物車運費規則
 Shopping Cart Taxes and Charges Master,購物車稅收和收費碩士
 Shopping Cart Taxes and Charges Masters,購物車稅收和收費碩士
+Something went wrong!,出事了！
+Something went wrong.,出事了。
 Tax Master,稅務碩士
 To Pay,支付方式
 Updated,更新
 You are not allowed to reply to this ticket.,你不允許回复此票。
+You need to be logged in to view your cart.,您需要登錄才能查看您的購物車。
 You need to enable Shopping Cart,您需要啟用的購物車
 {0} cannot be purchased using Shopping Cart,{0}不能使用購物車購買
 {0} is required,{0}是必需的
