--- a/shopping_cart/translations/tr.csv
+++ b/shopping_cart/translations/tr.csv
@@ -1,6 +1,6 @@
 "<a href=""#Sales Browser/Customer Group"">Add / Edit</a>","<a href=""#Sales Browser/Customer Group""> Ekle / Düzenle </ a>"
 "<a href=""#Sales Browser/Territory"">Add / Edit</a>","<a href=""#Sales Browser/Territory""> Ekle / Düzenle </ a>"
-Billed,Gagalı
+Billed,Faturalanmış
 Company,Şirket
 Currency is required for Price List {0},Döviz Fiyat Listesi için gereklidir {0}
 Default Customer Group,Varsayılan Müşteri Grubu
