--- a/shopping_cart/translations/bs.csv
+++ b/shopping_cart/translations/bs.csv
@@ -3,9 +3,9 @@
 Billed,Naplaćeno
 Company,Društvo
 Currency is required for Price List {0},Valuta je potrebno za Cjenika {0}
-Default Customer Group,Zadani Korisnik Grupa
-Default Territory,Zadani Regija
-Delivered,Isporučena
+Default Customer Group,Zadana grupa korisnika
+Default Territory,Zadani teritorij
+Delivered,Isporučeno
 Enable Shopping Cart,Omogućite Košarica
 Go ahead and add something to your cart.,Ići naprijed i dodati nešto u košaricu.
 Hey! Go ahead and add an address,Hej! Ići naprijed i dodati adresu
