--- a/shopping_cart/translations/fr.csv
+++ b/shopping_cart/translations/fr.csv
@@ -21,7 +21,7 @@ Please specify a Price List which is valid for Territory,S&#39;il vous plaît sp
 Please specify currency in Company,S&#39;il vous plaît préciser la devise dans la société
 Please write something,S'il vous plaît écrire quelque chose
 Please write something in subject and message!,S'il vous plaît écrire quelque chose dans le thème et le message !
-Price List,Liste des Prix
+Price List,Liste des prix
 Price List not configured.,Liste des prix non configuré.
 Quotation Series,Série de devis
 Shipping Rule,Livraison règle
