--- a/shopping_cart/translations/ja.csv
+++ b/shopping_cart/translations/ja.csv
@@ -37,7 +37,7 @@ Something went wrong!,何かが間違っていた！
 Something went wrong.,エラーが発生しました。
 Tax Master,税金のマスター
 To Pay,支払わなければ
-Updated,更新日
+Updated,更新済み
 You are not allowed to reply to this ticket.,あなたは、このチケットに返信することはできません。
 You need to be logged in to view your cart.,あなたは買い物カゴを見るためにログインする必要があります。
 You need to enable Shopping Cart,あなたはショッピングカートを有効にする必要があります
