--- a/shopping_cart/translations/pt.csv
+++ b/shopping_cart/translations/pt.csv
@@ -12,7 +12,7 @@ Hey! Go ahead and add an address,Ei! Vá em frente e adicionar um endereço
 Invalid Billing Address,Inválido Endereço de Cobrança
 Invalid Shipping Address,Inválido envio Endereço
 Missing Currency Exchange Rates for {0},Falta de câmbio de moeda para {0}
-Name is required,Nome é obrigatório
+Name is required,O Nome é obrigatório
 Not Allowed,não Permitido
 Paid,betaald
 Partially Billed,gedeeltelijk gefactureerde
