--- a/shopping_cart/translations/zh-tw.csv
+++ b/shopping_cart/translations/zh-tw.csv
@@ -37,7 +37,7 @@ Something went wrong!,出事了！
 Something went wrong.,出事了。
 Tax Master,稅務碩士
 To Pay,支付方式
-Updated,更新
+Updated,已更新
 You are not allowed to reply to this ticket.,你不允許回复此票。
 You need to be logged in to view your cart.,您需要登錄才能查看您的購物車。
 You need to enable Shopping Cart,您需要啟用的購物車
