--- a/shopping_cart/translations/nl.csv
+++ b/shopping_cart/translations/nl.csv
@@ -1,10 +1,10 @@
 "<a href=""#Sales Browser/Customer Group"">Add / Edit</a>","<a href=""#Sales Browser/Customer Group""> toevoegen / bewerken < / a>"
 "<a href=""#Sales Browser/Territory"">Add / Edit</a>","<a href=""#Sales Browser/Territory""> toevoegen / bewerken < / a>"
 Billed,Gefactureerd
-Company,Vennootschap
+Company,Bedrijf
 Currency is required for Price List {0},Valuta is vereist voor prijslijst {0}
 Default Customer Group,Standaard Klant Groep
-Default Territory,Standaard Territory
+Default Territory,Standaard Regio
 Delivered,Geleverd
 Enable Shopping Cart,Enable Winkelwagen
 Go ahead and add something to your cart.,Ga je gang en iets toe te voegen aan uw winkelwagen.
